suppression numbers of rows to textarea contact-form

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1203,7 +1203,7 @@ CONTACT SECTION
       }
 
       & textarea.input-control {
-        height: 184px;
+        min-height: 184px;
         padding-top: 15px;
         resize: none;
       }
